--- a/debian/control
+++ b/debian/control
@@ -2,24 +2,27 @@ Source: libxfixes
 Section: x11
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
-Uploaders: David Nusinow <dnusinow@debian.org>, Drew Parsons <dparsons@debian.org>, Cyril Brulebois <kibi@debian.org>
+Uploaders: Drew Parsons <dparsons@debian.org>, Cyril Brulebois <kibi@debian.org>
 Build-Depends:
- debhelper (>= 5),
+ debhelper (>= 8.1.3),
+ dh-autoreconf,
  libx11-dev (>= 2:1.3.3-2),
- x11proto-fixes-dev (>= 4.0),
+ x11proto-fixes-dev (>= 1:5.0),
  pkg-config,
  quilt,
- automake,
- libtool,
  xutils-dev (>= 1:7.5+4),
-Standards-Version: 3.9.0
+Standards-Version: 3.9.2
 Vcs-Git: git://git.debian.org/git/pkg-xorg/lib/libxfixes
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/lib/libxfixes.git
 
 Package: libxfixes3
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, 
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
 Description: X11 miscellaneous 'fixes' extension library
  libXfixes provides an X Window System client interface to the 'XFIXES'
  extension to the X protocol.
@@ -36,7 +39,9 @@ Package: libxfixes3-udeb
 XC-Package-Type: udeb
 Section: debian-installer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
 Description: X11 miscellaneous 'fixes' extension library
  This is a udeb, or a microdeb, for the debian-installer.
 
@@ -44,7 +49,11 @@ Package: libxfixes3-dbg
 Section: debug
 Architecture: any
 Priority: extra
-Depends: ${shlibs:Depends}, ${misc:Depends}, libxfixes3 (= ${binary:Version})
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ libxfixes3 (= ${binary:Version}),
+Multi-Arch: same
 Description: X11 miscellaneous 'fixes' extension library (debug package)
  libXfixes provides an X Window System client interface to the 'XFIXES'
  extension to the X protocol.
@@ -63,7 +72,12 @@ Description: X11 miscellaneous 'fixes' extension library (debug package)
 Package: libxfixes-dev
 Section: libdevel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libxfixes3 (= ${binary:Version}), libx11-dev, x11proto-fixes-dev (>= 4.0-1)
+Depends:
+ ${shlibs:Depends},
+ ${misc:Depends},
+ libxfixes3 (= ${binary:Version}),
+ libx11-dev,
+ x11proto-fixes-dev (>= 1:5.0-1),
 Description: X11 miscellaneous 'fixes' extension library (development headers)
  libXfixes provides an X Window System client interface to the 'XFIXES'
  extension to the X protocol.
