--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Drew Parsons <dparsons@debian.org>, Cyril Brulebois <kibi@debian.org>
 Build-Depends:
- debhelper (>= 8.1.3),
+ debhelper (>= 9),
  dh-autoreconf,
  libx11-dev (>= 2:1.3.3-2),
  x11proto-fixes-dev (>= 1:5.0),
@@ -72,6 +72,7 @@ Description: X11 miscellaneous 'fixes' extension library (debug package)
 Package: libxfixes-dev
 Section: libdevel
 Architecture: any
+Multi-arch: same
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
